2003-08-20  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>

	*  e-time-utils.c (parse_with_strptime): Fixes #43558 Appointment
	Editor always gives time validation error for apptmnts in non
	UTF-8/non ASCII locales.

2003-08-11  Not Zed  <NotZed@Ximian.com>

	* e-msgport.c (e_thread_put): check pthread_create return code
	properly.
	(e_mutex_lock): check pthread* return codes properly.
	(e_mutex_unlock): Same here.
	(e_mutex_cond_wait): and here.

2003-07-29  Dan Winship  <danw@ximian.com>

	* e-gui-utils.c (e_icon_for_mime_type): New function to return an
	icon for a MIME type, using GnomeIconTheme if available or
	gnome-vfs and gnome-mime-data if not.

2003-07-03  JP Rosevear  <jpr@ximian.com>

	* e-xml-hash-utils.c (foreach_save_func): encode the text
	(e_xml_from_hash): pass xmlDoc to foreach method
	(e_xmlhash_new): check for file existence
	(e_xmlhash_destroy): only destroy the hash if it exists

2003-06-19  Dan Winship  <danw@ximian.com>

	* e-xml-hash-utils.c (e_xml_to_hash): don't leak an extra copy of
	the values

2003-06-14  Larry Ewing  <lewing@ximian.com>

	* e-name-western.c (e_name_western_get_suffix_at_str_end): free
	word before breaking out of the loop.

2003-06-12  Rodrigo Moya <rodrigo@ximian.com>

	* e-config-listener.c (add_key): use GCONF_CLIENT_PRELOAD_RECURSIVE
	when adding watched directories to avoid GConfd round-trips.

2003-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* e-trie.c (e_trie_free): Free the fail_states array.

2003-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* e-meta.c (meta_load): Stat the file to make sure it exists
	before trying to parse it using xmlParseFile().
